# UdpServer

./: .gitignore  CMakeLists.txt  README.md  SrvInfo.cpp  SrvInfo.h  SrvInfoUdpServer.cpp  SrvInfoUdpServer.h  config.json  main.cpp  service_info.json  utils.h
jsoncpp/: json_tool.h  json_value.cpp
jsoncpp/include/json/: allocator.h
